# network-channels

./: README.md  network-channels.cabal
src/Network/: Channel.hs
src/Network/Channel/: Client.hs  Raw.hs  Server.hs
src/Network/Channel/Client/: Trans.hs
src/Network/Channel/Server/: Trans.hs
