Name:                network-channels
Version:             0.1
Synopsis:            A library that exposes channels for a server-client network connection.
Category:            Control
Author:              Paul Visschers
Build-Type:          Simple
Cabal-Version:       >=1.6.0.1
Stability:           experimental


Library
  HS-Source-Dirs:    src
  Build-Depends:     base >= 4, network, containers
  Exposed-Modules:   Network.Channel.Client
                     Network.Channel.Server
  Other-Modules:     Network.Channel.Raw